--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -5,6 +5,11 @@
   <% end %>
   </ul>
   <p>
+  <%= f.label :tag_list %><br />
+  <%= f.text_field :tag_list %>
+</p>
+
+  <p>
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </p>
@@ -12,7 +17,8 @@
     <%= f.label :body %><br />
     <%= f.text_area :body %>
   </p>
+
   <p>
     <%= f.submit %>
   </p>
-<% end %>
+  <% end %>
